# Codierungstheorie

./: .gitignore  CMakeLists.txt
p1/: CMakeLists.txt  main.cpp  notes.txt  presentation.tex
p1/include/: BinaryHuffmanTree.hpp  BitReader.hpp  BitWriter.hpp
p2/: CMakeLists.txt  functions.cmake  main.cpp  presentation.tex
p2/include/: Polynom.hpp
p3/: CMakeLists.txt  main.cpp
p3/include/: klasse.hpp  matrix.hpp  nebenklassen.hpp  vector.hpp
presentations/: presentation.aux  presentation.nav  presentation.out  presentation.snm  presentation.tex  presentation.toc  presentation.vrb
presentations/old/: presentation.aux  presentation.nav  presentation.out  presentation.toc
